--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -20,12 +20,12 @@ services:
     image: mongo:latest
     container_name: mongodb
 
-  p1web:
-    image: localhost:5000/p1web:latest
-    container_name: "p1web"
+  polysetsweb:
+    image: localhost:5000/polysetsweb:latest
+    container_name: "polysetsweb"
     build:
       context: .
-      dockerfile: src/p1-web/Dockerfile
+      dockerfile: src/polysets-web/Dockerfile
   
   authapi:
     image: localhost:5000/authapi:latest
