--- a/src/auth-api/package.json
+++ b/src/auth-api/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@p1app/dataaccess": "^1.0.5",
+    "@pridevel/dataaccess": "^1.0.0",
     "bcrypt-nodejs": "^0.0.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
