--- a/scripts/docker/haproxy/config/haproxy.cfg
+++ b/scripts/docker/haproxy/config/haproxy.cfg
@@ -42,7 +42,7 @@ backend be_p1web
     mode http
     http-request set-header X-Forwarded-Port %[dst_port]
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
-    server p1web p1web:3000
+    server p1webapp p1webapp:3000
 
 backend be_authapi
     mode http
@@ -50,4 +50,8 @@ backend be_authapi
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
     server authapi authapi:3000
 
-
+backend be_securityapi
+    mode http
+    http-request set-header X-Forwarded-Port %[dst_port]
+    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    server securityapi securityapi:3000
