--- a/src/p1-web/Dockerfile
+++ b/src/p1-web/Dockerfile
@@ -1,8 +1,9 @@
 FROM node:12.18-alpine
+RUN apk add --no-cache bash
 ENV NODE_ENV=production
 WORKDIR /usr/src/app
-COPY ["src/polysets-web/package.json", "src/polysets-web/package-lock.json*", "src/polysets-web/npm-shrinkwrap.json*", "./"]
-RUN npm install --production --silent && mv node_modules ../
-COPY ./src/polysets-web/ .
+COPY ["src/p1-web/package.json", "src/p1-web/package-lock.json*", "src/p1-web/npm-shrinkwrap.json*", "./"]
+RUN npm install
+COPY ./src/p1-web . 
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD /bin/bash -c "npm start"
