--- a/docker-compose-dev.override.yml
+++ b/docker-compose-dev.override.yml
@@ -6,9 +6,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - /mnt/e/Pridevel/reactjs/PolySets/scripts/docker/haproxy/config/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-      - /mnt/e/Pridevel/reactjs/PolySets/scripts/docker/haproxy/config/routes.map:/usr/local/etc/haproxy/maps/routes.map:ro
-      - /mnt/e/Pridevel/reactjs/PolySets/scripts/docker/haproxy/pem/p1app.pem:/etc/haproxy/pem/p1app.pem
+      - /mnt/d/git/p1app/scripts/docker/haproxy/config/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - /mnt/d/git/p1app/scripts/docker/haproxy/config/routes.map:/usr/local/etc/haproxy/maps/routes.map:ro
+      - /mnt/d/git/p1app/scripts/docker/haproxy/pem/p1app.pem:/etc/haproxy/pem/p1app.pem
 
   registry-ui:
     ports:
@@ -32,31 +32,55 @@ services:
       - 9004:27017
     volumes:
       - /mnt/data/mongodb:/data/db
-
-  p1web:
-    environment:
-      NODE_ENV: development
-    ports:
-      - 9200:3000
-      - 9201:9229
-    command: ["node", "--inspect=0.0.0.0:9229", "./bin/www"]
   
-  polysetsweb:
+  geth:
+    ports:    
+      - "9008:8544"
+      - "9009:30303"
+      - "9009:30303/udp"
+    command: '--identity geth --networkid 2017042099 --datadir "/root/.ethereum/devchain" --unlock 0,1 --password /root/.ethereum/devchain/pw --port "30303" --rpc --rpcport "8544" --rpccorsdomain "*" --rpcaddr="0.0.0.0" --rpcapi "admin,db,eth,miner,net,web3,personal,txpool" --nodiscover --minerthreads=2  --etherbase 0'
+    volumes: 
+      - /mnt/data/geth:/root/.ethereum
+    
+  p1solc:
+    ports:
+      - "9010:8080"
+      - "9011:8545"
+  
+  netstatsapi:
+    environment:
+      - WS_SERVER=ws://factory.shinit.net:15000
+      #- WS_SERVER=netstatsfront:3000 
+      - WS_SECRET=20170420devchain
+      - RPC_HOST=geth
+      - RPC_PORT=8544
+      - INSTANCE_NAME=geth_node
+      - CONTACT_DETAILS=
+      - NODE_ENV=private
+      - LISTENING_PORT=30303
+      - VERBOSITY=3
+  
+  ganache:
+    ports:
+      - "9012:8545"
+      
+  p1webapp:
     environment:
       NODE_ENV: development
     ports:
       - 9200:3000
       - 9201:9229
-    command: ["node", "--inspect=0.0.0.0:9229", "./bin/www"]
-
+  p1dapp:
+    ports:
+      - "9202:3000"
+  
   authapi:
     environment:
       NODE_ENV: development
     ports:
       - 9100:3000
       - 9101:9229
-    command: ["node", "--inspect=0.0.0.0:9229", "./bin/www"]
-  
+      
   securityapi:
     environment:
       NODE_ENV: development
@@ -64,5 +88,7 @@ services:
       - 9102:3000
       - 9103:9229
     command: ["node", "--inspect=0.0.0.0:9229", "./bin/www"]
+
+  
   
   
