--- a/src/auth-api/package.json
+++ b/src/auth-api/package.json
@@ -6,11 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@pridevel/dataaccess": "^1.0.0",
+    "@p1app/dataaccess": "^1.0.0",
     "bcrypt-nodejs": "^0.0.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
