--- a/src/polysets-dataaccess/package.json
+++ b/src/polysets-dataaccess/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@p1app/dataaccess",
-  "version": "1.0.0",
+  "name": "@pridevel/dataaccess",
+  "version": "1.0.2",
   "description": "Data Access Component",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "p1app",
+  "author": "Pridevel",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^10.0.0",
