--- a/scripts/docker/haproxy/config/haproxy.cfg
+++ b/scripts/docker/haproxy/config/haproxy.cfg
@@ -12,7 +12,7 @@ defaults
     timeout client  50000
     timeout server  50000
 
-frontend fe_p1_http
+frontend fe_ps_http
     bind *:80
     mode http
     option httplog
@@ -21,10 +21,10 @@ frontend fe_p1_http
     stats refresh 10s
     stats admin if LOCALHOST
 
-    use_backend %[path,map_beg(/usr/local/etc/haproxy/maps/routes.map,be_p1web)]
+    use_backend %[path,map_beg(/usr/local/etc/haproxy/maps/routes.map,be_web)]
 
-frontend fe_p1_https
-    bind *:443 ssl crt /etc/haproxy/pem/p1app.pem user nobody
+frontend fe_ps_https
+    bind *:443 ssl crt /etc/haproxy/pem/polysets.pem user nobody
     mode http
     option httplog
     stats enable
@@ -36,13 +36,13 @@ frontend fe_p1_https
     http-request set-header X-Forwarded-For %[src]
     http-request set-header X-Forwarded-Proto https
 
-    use_backend %[path,map_beg(/usr/local/etc/haproxy/maps/routes.map,be_p1web)]
+    use_backend %[path,map_beg(/usr/local/etc/haproxy/maps/routes.map,be_web)]
 
-backend be_p1web
+backend be_web
     mode http
     http-request set-header X-Forwarded-Port %[dst_port]
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
-    server p1webapp p1webapp:3000
+    server webapp webapp:3000
 
 backend be_authapi
     mode http
