--- a/src/auth-api/Dockerfile
+++ b/src/auth-api/Dockerfile
@@ -6,4 +6,4 @@ COPY ["src/auth-api/package.json", "src/auth-api/package-lock.json*", "src/auth-
 COPY ./src/auth-api/ .
 RUN npm set //verdaccio:4873/:_authToken "g7JwbbhC0dnE3vkbzZnGwIJcoTHmHA1x5UNdAC8y7hk="
 EXPOSE 3000
-ENTRYPOINT ["/bin/bash", "-c", "npm install --registry http://verdaccio:4873 && mv node_modules ../ && npm start"]
+ENTRYPOINT ["/bin/bash", "-c", "npm install --registry http://verdaccio:4873 && cp -rf node_modules ../ && rm -rf node_modules && npm start"]
