--- a/docker-compose-dev.override.yml
+++ b/docker-compose-dev.override.yml
@@ -68,8 +68,10 @@ services:
     environment:
       NODE_ENV: development
     ports:
-      - 9200:3000
+      - 9200:80
       - 9201:9229
+    volumes: 
+        - './scripts/docker/polysets-web/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf'
 
   p1dapp:
     ports:
