--- a/scripts/docker/verdaccio/config/config.yaml
+++ b/scripts/docker/verdaccio/config/config.yaml
@@ -23,6 +23,9 @@ publish:
 uplinks:
   npmjs:
     url: http://registry.npmjs.org/
+    max_fails: 20
+    fail_timeout: 10m
+
 
 packages:
   '@*/*':
